--- a/lms/static/sass/course/courseware/_courseware.scss
+++ b/lms/static/sass/course/courseware/_courseware.scss
@@ -661,3 +661,11 @@ section.foldit {
 
   }
 }
+
+.courseware-results-wrapper {
+  padding: ($baseline*2);
+
+  .courseware-results {
+    display: none;
+  }
+}
