--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -248,38 +248,18 @@ html:not('.afontgarde') .icon-fallback-img {
     }
 
     .closed-captions {
-      display: none;
       position: absolute;
       width: 85%;
-      max-height: ($baseline * 3);
       left: 5%;
       top: 70%;
+    }
+
+    .closed-captions.is-visible {
+      max-height: ($baseline * 3);
       border-radius: ($baseline / 5);
       padding: 8px ($baseline / 2) 8px ($baseline * 1.5);
-      background: rgba(0, 0, 0, .35);
+      background: rgba(0, 0, 0, .75);
       color: $yellow;
-
-      &:before {
-        position: absolute;
-        display: inline-block;
-        top: 50%;
-        @include margin-left(-($baseline));
-        margin-top: -.5em;
-        font-family: 'FontAwesome';
-        content: "\f142";
-        color: $white;
-        opacity: 0.5;
-      }
-
-      &:hover,
-      &.is-dragging {
-        background: rgba(0, 0, 0, .75);
-        cursor: move;
-
-        &:before {
-          opacity: 1.0;
-        }
-      }
     }
 
     .video-player {
