--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -36,15 +36,18 @@ import json
 
 <%block name="js_extra">
   <script src="${static.url('js/commerce/credit.js')}"></script>
-  <%static:js group='dashboard'/>
+  <script src="${static.url('js/dashboard/donation.js')}"></script>
+  <script src="${static.url('js/dashboard/legacy.js')}"></script>
+  <script src="${static.url('js/dashboard/track_events.js')}"></script>
+
   <script type="text/javascript">
-    $(document).ready(function() {
-      edx.dashboard.legacy.init({
-        dashboard: "${reverse('dashboard')}",
-        signInUser: "${reverse('signin_user')}",
-        changeEmailSettings: "${reverse('change_email_settings')}"
+      $(document).ready(function () {
+          edx.dashboard.legacy.init({
+              dashboard: "${reverse('dashboard')}",
+              signInUser: "${reverse('signin_user')}",
+              changeEmailSettings: "${reverse('change_email_settings')}"
+          });
       });
-    });
   </script>
   % if settings.FEATURES.get('ENABLE_DASHBOARD_SEARCH'):
     <%static:require_module module_name="js/search/dashboard/dashboard_search_factory" class_name="DashboardSearchFactory">
@@ -58,6 +61,9 @@ import json
         banner.showMessage(${json.dumps(redirect_message)})
     </%static:require_module>
   % endif
+    <%static:require_module module_name="js/dashboard/views/dashboard_course_list_factory" class_name="DashboardCourseListFactory">
+        DashboardCourseListFactory(${current_courses}, ${archived_courses}, ${course_settings});
+    </%static:require_module>
 </%block>
 
 <div class="dashboard-notifications" tabindex="-1">
@@ -76,42 +82,10 @@ import json
 
 <section class="container dashboard" id="dashboard-main">
   <section class="my-courses" id="my-courses" role="main" aria-label="Content">
+
     <header class="wrapper-header-courses">
       <h2 class="header-courses">${_("My Courses")}</h2>
     </header>
-
-
-    % if len(course_enrollments) > 0:
-      <ul class="listing-courses">
-      <% share_settings = getattr(settings, 'SOCIAL_SHARING_SETTINGS', {}) %>
-      % for dashboard_index, enrollment in enumerate(course_enrollments):
-        <% show_courseware_link = (enrollment.course_id in show_courseware_links_for) %>
-        <% cert_status = cert_statuses.get(enrollment.course_id) %>
-        <% can_unenroll = (not cert_status) or cert_status.get('can_unenroll') %>
-        <% credit_status = credit_statuses.get(enrollment.course_id) %>
-        <% show_email_settings = (enrollment.course_id in show_email_settings_for) %>
-        <% course_mode_info = all_course_modes.get(enrollment.course_id) %>
-        <% show_refund_option = (enrollment.course_id in show_refund_option_for) %>
-        <% is_paid_course = (enrollment.course_id in enrolled_courses_either_paid) %>
-        <% is_course_blocked = (enrollment.course_id in block_courses) %>
-        <% course_verification_status = verification_status_by_course.get(enrollment.course_id, {}) %>
-        <% course_requirements = courses_requirements_not_met.get(enrollment.course_id) %>
-        <% course_program_info = course_programs.get(unicode(enrollment.course_id)) %>
-        <%include file = 'dashboard/_dashboard_course_listing.html' args="course_overview=enrollment.course_overview, enrollment=enrollment, show_courseware_link=show_courseware_link, cert_status=cert_status, can_unenroll=can_unenroll, credit_status=credit_status, show_email_settings=show_email_settings, course_mode_info=course_mode_info, show_refund_option=show_refund_option, is_paid_course=is_paid_course, is_course_blocked=is_course_blocked, verification_status=course_verification_status, course_requirements=course_requirements, dashboard_index=dashboard_index, share_settings=share_settings, user=user, course_program_info=course_program_info" />
-      % endfor
-
-      </ul>
-    % else:
-      <section class="empty-dashboard-message">
-        <p>${_("Looks like you haven't enrolled in any courses yet.")}</p>
-
-        % if settings.FEATURES.get('COURSES_ARE_BROWSABLE'):
-          <a href="${marketing_link('COURSES')}">
-            ${_("Find courses now!")}
-          </a>
-        %endif
-      </section>
-    % endif
 
     % if staff_access and len(errored_courses) > 0:
       <div id="course-errors">
