--- a/common/lib/xmodule/xmodule/css/video/display.scss
+++ b/common/lib/xmodule/xmodule/css/video/display.scss
@@ -252,6 +252,7 @@ html:not('.afontgarde') .icon-fallback-img {
       width: 85%;
       left: 5%;
       top: 70%;
+      text-align: center;
     }
 
     .closed-captions.is-visible {
