--- a/lms/templates/financial-assistance/apply.html
+++ b/lms/templates/financial-assistance/apply.html
@@ -1,5 +1,9 @@
 <%inherit file="../main.html"/>
-<%! from openedx.core.lib.js_utils import escape_json_dumps %>
+<%!
+import json
+
+from openedx.core.lib.js_utils import escape_json_dumps
+%>
 <%namespace name='static' file='/static_content.html'/>
 
 <%block name="js_extra">
@@ -8,10 +12,10 @@ FinancialAssistanceFormView({
     fields: ${escape_json_dumps(fields)},
     user_details: ${escape_json_dumps(user_details)},
     header_text: ${escape_json_dumps(header_text)},
-    student_faq_url: ${student_faq_url},
-    dashboard_url: ${dashboard_url},
+    student_faq_url: ${json.dumps(student_faq_url)},
+    dashboard_url: ${json.dumps(dashboard_url)},
     platform_name: ${escape_json_dumps(platform_name)},
-    submit_url: ${submit_url}
+    submit_url: ${json.dumps(submit_url)}
 });
 </%static:require_module>
 </%block>
