--- a/lms/templates/student_profile/learner_profile.html
+++ b/lms/templates/student_profile/learner_profile.html
@@ -18,6 +18,7 @@ from openedx.core.lib.js_utils import escape_json_dumps
         <p><span class="spin"><i class="icon fa fa-refresh" aria-hidden="true"></i></span> <span class="copy">${_("Loading")}</span></p>
     </div>
 </div>
+<div class="wrapper-badges"></div>
 <%block name="headextra">
     <%static:css group='style-course'/>
 </%block>
