--- a/lms/static/sass/views/_financial-assistance.scss
+++ b/lms/static/sass/views/_financial-assistance.scss
@@ -28,6 +28,7 @@
 
   p {
     @extend %fa-copy;
+    font-size: 0.875em;
   }
 
   .financial-assistance {
@@ -84,22 +85,53 @@
   }
 
   // Application form View
+  .intro {
+    border-bottom: 4px solid $gray-l5;
+
+    p {
+      margin: 10px 0;
+    }
+  }
+
+  .success-message {
+    p {
+      margin: 10px 0;
+    }
+  }
+
+  .btn-dashboard {
+    @include float(right);
+    color: $white;
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: $white;
+    }
+  }
+
   .user-info {
     @include clearfix();
-    border-bottom: 2px solid $gray-l1;
+    border-bottom: 2px solid $gray-l5;
+    padding: 20px 0;
+    margin-bottom: 20px;
 
     .info-column {
       @include float(left);
-      width: 25%;
+      width: 100%;
+      margin: 10px 0;
     }
 
     .title {
       @extend %fa-copy;
+      padding: 0;
     }
 
     .data {
       @extend %fa-copy;
+      padding: 0;
       color: $black;
+      font-size: 1.125em;
     }
   }
 
@@ -107,14 +139,14 @@
     @extend .login-register;
 
     .action-primary {
-      @include float(right);
+      @include float(left);
       width: auto;
       margin-top: 0;
     }
 
     .nav-link {
-      margin-top: 15px;
-      display: inline-block;
+      margin: 15px 0;
+      display: block;
     }
 
     form {
@@ -137,15 +169,78 @@
         box-shadow: none;
       }
 
+      textarea {
+        height: 125px;
+      }
+
       .checkbox {
         height: auto;
         position: absolute;
         top: 5px;
 
         & + label {
+          @include margin-left(30px);
           display: inline-block;
-          margin-left: 30px;
         }
+      }
+    }
+  }
+
+  .cta-wrapper {
+    border-top: 4px solid $gray-l5;
+    padding: 20px 0;
+  }
+
+  @include media($bp-medium) {
+    .user-info {
+      .info-column {
+        width: 50%;
+      }
+    }
+
+    .financial-assistance-form {
+      .action-primary {
+        @include float(right);
+      }
+
+      .nav-link {
+        display: inline-block;
+      }
+    }
+  }
+
+  @include media($bp-large) {
+    .user-info {
+      .info-column {
+        width: 25%;
+      }
+    }
+
+    .financial-assistance-form {
+      .action-primary {
+        @include float(right);
+      }
+
+      .nav-link {
+        display: inline-block;
+      }
+    }
+  }
+
+  @include media($bp-huge) {
+    .user-info {
+      .info-column {
+        width: 25%;
+      }
+    }
+
+    .financial-assistance-form {
+      .action-primary {
+        @include float(right);
+      }
+
+      .nav-link {
+        display: inline-block;
       }
     }
   }
